NFC 테스트 코드

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.example.nfc_enterance_android"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission android:name="android.permission.NFC"/>
+	<uses-permission android:name="android.hardware.nfc" android:required="true"/>
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="16" />
 
     <application
@@ -21,6 +22,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="DetectActivity">
+            <intent-filter>
+    				<action android:name="android.nfc.action.TECH_DISCOVERED"/>
+			 </intent-filter>
+			 <meta-data
+			     android:name="android.nfc.action.TECH_DISCOVERED" 
+			     android:resource="@xml/nfc_tech_filter" />
+			 <intent-filter>
+    				<action android:name="android.nfc.action.TAG_DISCOVERED"/>
+    				<category android:name="android.intent.category.DEFAULT" />
+			 </intent-filter>
         </activity>
     </application>
 
